﻿See https://github.com/MarcusWolschon/osmeditor4android/ for documentation on this version and all changes.


1168: various small internal changes, handle match=”none” the same as “key for building the form display.

1166: updated preset.

1164: force show keyboard and dropdown when adding with name suggestions.

1162: protect against broken NMEA sentences, update presets.

1160: better support for language specific name tags.
 
1158: sort combo and multi-select values correctly.

1156: properly quote delimiter character in multi-selects, updated preset and translations.

1154: fix regression when displaying multiple values in a multi-select in the form UI, try to make hiding the navbar more reliable, updated preset.

1152: add a label to nodes without an icon, if icons are turned off, all nodes will get a label, Delete, copy, cut and paste of tags in form UI. Fix issue with box picker when nothing was downloaded.

1150: fix issue with preset search that stopped all results being shown, updated presets and translations.

1148: made name suggestions work better with the form UI

1146: bumped Android version number

1142: minor bug fixes and improvements.

1142: fix error in way bounding box calculation and add zoom to selection function.

1140: fix crash in NotificationCache, disable geometry improvement handles when a relation is selected, fix clipboard related crash on pre-Honeycomb devices.

1138: display house numbers on building centroids, adjustable auto-lock feature (default 60s), limit number of alerts/notifications per class (default 5), make upload dialog comment and source fields full width, bug fixes.

1132: make preset applied  to otherwise empty set of tags or unknown ones the one used for autocomplete values.

1130: fix undo button behavior on long presses,
